--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "log_rest_aunt",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.5",
-    "morgan": "^1.10.0",
-    "nodemailer": "^6.5.0"
-  },
-  "devDependencies": {
-    "cors": "^2.8.5",
-    "nodemon": "^2.0.7"
-  }
+    "name": "log_rest_aunt",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "mongoose": "^5.12.5",
+        "morgan": "^1.10.0",
+        "nodemailer": "^6.5.0"
+    },
+    "devDependencies": {
+        "cors": "^2.8.5",
+        "nodemon": "^2.0.7"
+    }
 }
